fixed footer to stick at bottom of html to not overlap with content on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ body {
 	margin-bottom: 7em;
 }
 
+.container {
+	min-height: 100%;
+}
+
 #header, #game, #active {
 	padding-top: 2em;
 }
